<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vazquez.carlos.buttonapp.ButtonColorsPNGActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/default_focused"
        android:id="@+id/button7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/red"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_red" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/green"
        android:id="@+id/button9"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_green" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/blue"
        android:id="@+id/button10"
        android:layout_below="@+id/button9"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_blue" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/light_blue"
        android:id="@+id/button11"
        android:layout_below="@+id/button10"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_lblue" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/brown"
        android:id="@+id/button12"
        android:layout_below="@+id/button11"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_brown" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/pink"
        android:id="@+id/button13"
        android:layout_below="@+id/button12"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_pink" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/yellow"
        android:id="@+id/button14"
        android:layout_below="@+id/button13"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_yellow" />
</RelativeLayout>
