<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vazquez.carlos.buttonapp.ButtonActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/push_button"
        android:id="@+id/pushButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="onNewButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/button_with_icon"
        android:id="@+id/buttonWithIcon"
        android:layout_below="@+id/pushButton"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:layout_marginBottom="5dp"
        android:onClick="onIconButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/colors_buttons_png"
        android:id="@+id/colorButtonPNG"
        android:layout_below="@+id/buttonWithIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textColor="@color/Blue"
        android:onClick="onColorsButtonPNG" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/colors_buttons_val"
        android:id="@+id/colorButtonVal"
        android:layout_below="@+id/colorButtonPNG"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/holo_red_light"
        android:onClick="onColorsButtonHValues" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_below="@+id/colorButtonVal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:singleLine="true"
        android:textOff="@string/toggle_button_off"
        android:textOn="@string/toggle_button_on" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_button"
        android:id="@+id/switchButton"
        android:layout_below="@+id/toggleButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button"
        android:id="@+id/textView"
        android:layout_below="@+id/switchButton"
        android:layout_alignParentStart="true"
        android:textColor="@color/Black"
        android:layout_marginBottom="5dp" />

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/uprb_logo"
        android:contentDescription="@string/image_button"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:onClick="onImageButton"
        android:scaleType="fitCenter"
        android:background="@color/White" />

</RelativeLayout>
